update for soft-launch
